# pressio-log

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  VERSION
.github/workflows/: build_and_test.yml  ci-baseline.yml  ci-fedora.yml  ci-ubuntu.yml
cmake/: version.cmake
include/pressio-log/: core.hpp  version.hpp
include/pressio-log/fmt/: fmt.h
include/pressio-log/logger/: colors.hpp  levels.hpp  logger.hpp  logger_impl.hpp  loglevel.hpp  logto.hpp  utils.hpp
lib/fmt/: CMakeLists.txt
scripts/: fix_headers.sh  license-template
tests/: CMakeLists.txt  test_logger.cc
tests/cmake/: macrosForCreatingTests.cmake  macrosForCreatingUnitTests.cmake  options.cmake  version.cmake
tests/gtest_mains/: gTestMain_mpi.cc  gTestMain_serial.cc
tests/logging/: CMakeLists.txt  LoggerTest.hpp  helpers.hpp  test_logger.cc  test_logger_change_comm.cc  test_logger_custom_dtype.cc  test_logger_formatting.cc  test_logger_mpi.cc  test_logger_multiple_args.cc  test_logger_serial.cc  test_logger_write_mpi.cc  test_logger_write_serial.cc
